--- a/framework/menu.css
+++ b/framework/menu.css
@@ -301,7 +301,8 @@ i{
 }
 /* Questo selettore farà si che la goccia di font awesome si muova solo se clicco su radio che non hanno già il checked.
 l'animazione del movimento della fa-tint è con l'active, quella del colore col checked 
-quindi nessuna delle due animazioni sovrascrive l'altra*/
+quindi nessuna delle due animazioni sovrascrive l'altra
+e cambiare colore al checked fa durare il nuovo colore fino al nuovo checked*/
 
 
 /* RESPONSIVE PER IL MENU' (width e height)*/
