--- a/framework/menu.css
+++ b/framework/menu.css
@@ -25,8 +25,6 @@ main{
 /* Caratteristiche comuni per gli elementi fixed sulla destra */
 .fixed{
     position: fixed;
-    top: 0;
-    right: 0;
     z-index: 10;
     padding: 1vh 1vw;
     border: 2px solid white;
@@ -48,18 +46,9 @@ main{
     opacity: 0.95;
 }
 
-.span-767{
-    transform: rotate(270deg);
-    display: none;
-    align-self: flex-end;
-    text-align: center;
-    margin: auto;
-    white-space: nowrap;
-    font-size: 1.5vw;
-}
-
 .fake-container{
     top: 12.1vh;
+    right: 0;
     text-align: center;
     justify-content: flex-start;
 }
@@ -340,14 +329,8 @@ e cambiare colore al checked fa durare il nuovo colore fino al nuovo checked*/
         right: 1.3vw;
     }
 
-    .fa-tint,
-    .span-768{  
+    .fa-tint{  
         display: none;
-    }
-
-    .fixed .span-767{
-        display: block;
-        font-size: normal;
     }
 }
 
@@ -363,25 +346,6 @@ e cambiare colore al checked fa durare il nuovo colore fino al nuovo checked*/
     }
 }
 
-@media screen and (max-height:900px){
-    .span-768{  
-        display: none;
-    }
-    .fixed .span-767{
-        display: block;
-        transform: rotate(360deg);
-        font-size: medium;
-        white-space: normal;
-    }        
-}
-
-@media screen and (max-width: 1000px) and (max-height:900px){
-    .fixed .span-767{
-        transform: rotate(270deg);
-        white-space: nowrap;
-        font-size: 1vh;
-    }       
-}
 
 @media screen and (max-width: 991px) and (max-height:1000px){
     .radio-mark,
@@ -413,23 +377,11 @@ e cambiare colore al checked fa durare il nuovo colore fino al nuovo checked*/
     }
 }
 
-@media screen and (max-height:700px){
-    .fixed .span-767{
-       font-size: small;
-   }
-}
-
 @media screen and (max-height:500px){
    .fake-container,
-   .fixed .span-767,
    .radio-mark,
    .change-color,
    .fa-tint{
        display: none;
    }
-
-   span.none{
-       display: inline-block;
-   }
-
 }
