--- a/framework/menu.css
+++ b/framework/menu.css
@@ -659,7 +659,7 @@ i{
      }
 }
 
-@media screen and (max-width: 991px){
+@media screen and (max-width: 992px){
     .fake-container span,
     .fa-hand-pointer{
         display: none;
@@ -774,7 +774,7 @@ i{
 
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 768px){
     .fixed{
         width: 5vw;
         max-width: 5vw;
@@ -822,25 +822,24 @@ i{
     .go-page-2{
         font-size: 1vh;
     }
+ }
 
-    
-
+ @media screen and (max-height:800px){
+    .page,
+    .switch{
+        top: 24.3vh;
+        right: 0;
+        width: 11.25vw;
+        max-width: 11.25vw;
+        background-image: url(../img/Blue\ wood.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
  }
 
 @media screen and (max-height:600px){
    .fa-hand-pointer{
        display: none;
-   }
-
-   .page,
-   .switch{
-       top: 24.3vh;
-       right: 0;
-       width: 11.3vw;
-       max-width: 11.3vw;
-       background-image: url(../img/Blue\ wood.png);
-       background-repeat: no-repeat;
-       background-size: cover;
    }
 }
 
@@ -867,7 +866,7 @@ i{
     } 
  }
 
- @media screen and (max-width: 991px) and (max-height:1000px){
+ @media screen and (max-width: 992px) and (max-height:1000px){
     .radio-mark,
     .change-color{
         width: 10px;
@@ -887,6 +886,41 @@ i{
     }
 }
 
+
+
+@media screen and (max-width: 992px) and (max-height:800px){
+    .page, 
+    .switch{
+        width: 4.04vw;
+        right: 6.01vw;
+        min-height: 12vh;
+        top: 12.1vh;
+    }
+    
+}
+
+
+@media screen and (max-width: 992px) and (max-height:600px){
+
+    .close-menu,
+    .minimize{
+        width: 4.04vw;
+    }
+
+    .page,
+    .switch{
+        top: 12.1vh;
+    }
+}
+
+@media screen and (max-width: 992px) and (max-height:500px){
+    
+    .page,
+    .switch{
+        top: 13.1vh;
+    }
+}
+
 @media screen and (max-width: 768px) and (max-height:1000px){
     .left,
     .right,
@@ -902,31 +936,19 @@ i{
     }
 }
 
-
- @media screen and (max-width: 991px) and (max-height:600px){
-    .page, 
-    .switch{
-        width: 4.04vw;
-        right: 6.01vw;
-        min-height: 12vh;
-        top: 12.1vh;
-    }
-
-    .close-menu,
-    .minimize{
-        width: 4.04vw;
-    }
-}
-
-@media screen and (max-width: 991px) and (max-height:600px){
+@media screen and (max-width: 767px) and (max-height:800px){
     .page,
     .switch{
-        top: 12.1vh;
+        right: 5.1vw;
     }
 
+    .close-menu:not(.closed),
+    .minimize:not(.open-it){
+        right: 9.25vw;
+    }
 }
 
-@media screen and (max-width: 767px) and (max-height:600px){
+@media screen and (max-width: 768px) and (max-height:600px){
     .page,
     .switch{
         right: 5vw;
@@ -937,4 +959,3 @@ i{
         right: 9.05vw;
     }
 }
-
