--- a/framework/menu.css
+++ b/framework/menu.css
@@ -841,21 +841,34 @@ i{
    .fa-hand-pointer{
        display: none;
    }
+
+   .switch{
+    height: 3.2vh;
 }
 
 @media screen and (max-height:500px){
-    
-    .page,
-    .switch{
-        top: 25.3vh;
-    }
-
-    .close-menu,
-    .minimize,
-    .fake-container{
-        top: 13.1vh;
-    }
+ 
+ .page,
+ .switch{
+     top: 25.3vh;
  }
+
+ .switch{
+     height: 4vh;
+ }
+
+ .close-menu,
+ .minimize,
+ .fake-container{
+     top: 13.1vh;
+ }
+}
+
+@media screen and (max-height:450px){
+ .switch{
+     height: 6vh;
+ }
+}
 
  @media screen and (max-height:350px){
     .fixed,
