--- a/framework/menu.css
+++ b/framework/menu.css
@@ -659,9 +659,12 @@ i{
         background-image: url(../img/Blue\ wood.png);
     }
 
-    .go-page-1,
-    .go-page-2{
+    .go-page-1{
         font-size: 0.8vh;
+    }
+
+    .go-page-2{
+        font-size: 1vh;
     }
 
     .vanish{
@@ -730,7 +733,9 @@ i{
 }
 
 @media screen and (max-width: 768px){
-    .fixed{
+    .fixed,
+    .minimize,
+    .switch{
         width: 5vw;
         max-width: 5vw;
     }
@@ -828,6 +833,18 @@ i{
         display: none;
     } 
  }
+
+ @media screen and (max-width: 1400px) and (max-height:1000px){
+    .go-page-1{
+        font-size: 0.7vh;
+    }
+}
+
+@media screen and (max-width: 1400px) and (max-height:800px){
+    .go-page-1{
+        font-size: 1vh;
+    }
+}
 
  @media screen and (max-width: 1200px) and (max-height:800px){
     .fake-container span{
