--- a/framework/menu.css
+++ b/framework/menu.css
@@ -834,6 +834,13 @@ i{
     } 
  }
 
+ @media screen and (min-width: 2000px) and (min-height: 801px) and (max-height:900px){
+    .page,
+    .switch{
+        top: 20.95vh;
+    }
+}
+
  @media screen and (max-width: 1400px) and (max-height:1000px){
     .go-page-1{
         font-size: 0.7vh;
